--- a/carriers-page.html
+++ b/carriers-page.html
@@ -329,8 +329,8 @@
 
             <div class="es-company-info-container d-none">
                 <h2>Kompaniya ma’lumotlari <span class="es-company-info-pages">1/2</span></h2>
-                <div class="es-company-info-wrapper">
-                    <div class="company-info-column">
+                <div class="row">
+                    <div class="col-12 col-md-4">
                         <input type="text" class="form-control es-checkout-input es-address-input" required
                             placeholder="Kompaniya nomi*">
                         <p class="es-alert-text"><img class="mr-2" src="img/ic_info.svg" alt="">Kompaniyaning yuridik
@@ -350,7 +350,7 @@
                             yoki JPG formatda yuklang. Obyekt
                             hajmi 1 mbdan oshib ketmasligi kerak</p>
                     </div>
-                    <div class="company-info-column">
+                    <div class="col-12 col-md-4 offset-md-1">
                         <input type="text" class="form-control es-checkout-input es-address-input" placeholder="INN">
                         <p class="es-alert-text"><img class="mr-2" src="img/ic_info.svg" alt="">INNni kiriting</p>
                         <input type="text" class="form-control es-checkout-input es-address-input" required
@@ -370,8 +370,8 @@
                     <h2>Tovar ma’lumotlari </h2>&nbsp;
                     <span class="es-company-info-pages">2/2</span>
                 </div>
-                <div class="es-company-info-wrapper">
-                    <div class="company-info-column">
+                <div class="row">
+                    <div class="col-12 col-md-4">
                         <input type="text" class="form-control es-checkout-input es-address-input"
                             placeholder="Kategoriya">
                         <p class="es-alert-text"><img class="mr-2" src="img/ic_info.svg" alt="">Mahsulotning
@@ -391,7 +391,7 @@
                         <p class="es-alert-text"><img class="mr-2" src="img/ic_info.svg" alt="">O‘zbekiston bozoridagi
                             ulushini belgilang</p>
                     </div>
-                    <div class="company-info-column">
+                    <div class="col-12 col-md-4 offset-md-1">
                         <input type="text" class="form-control es-checkout-input es-address-input" placeholder="Gramaj">
                         <p class="es-alert-text"><img class="mr-2" src="img/ic_info.svg" alt="">Gramajni kiriting (50gr)
                         </p>
@@ -470,7 +470,7 @@
             </div>
         </div>
         <div class="footer-black">
-            <div class="container-fluid">
+            <div class="container">
                 <div class="row footer-detail">
                     <div class="col-md-4">
                         <div class="social-list">
