--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="dropdown-item-inner">
                   Русский <img src="img/tick.svg" alt="">
                 </div>
-              </a>50
+              </a>
               <div class="border-line"></div>
               <a class="dropdown-item middle-item" href="#">
                 <div class="dropdown-item-inner">
@@ -1835,7 +1835,7 @@
           </div>
 
           <div class="es-location-info">
-            Shayxontohur tumani, 42A Navoiy shoh ko'chasi.<br>Chorsudagi sobiq GUM ro‘parasida.
+            Shayxontohur tumani, 42A Navoiy shoh ko'chasi.<br class="mob-location-br">Chorsudagi sobiq GUM ro‘parasida.
           </div>
 
           <a class="btn btn-more" href="#">MARSHRUT CHIZISH</a>
@@ -1896,7 +1896,7 @@
       </div>
     </div>
     <div class="footer-black">
-      <div class="container-fluid">
+      <div class="container">
         <div class="row footer-detail">
           <div class="col-md-4">
             <div class="social-list">
@@ -2207,7 +2207,7 @@
                 <h5 class="mb-0">
                   <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
                     aria-controls="collapseOne">
-                    <span>Qur’oni Karim</span><img src="img/collapse-item-ic.svg" alt="" />
+                    <span class="mob-search-item-title">Qur’oni Karim</span><img src="img/collapse-item-ic.svg" alt="" />
                   </button>
                 </h5>
               </div>
@@ -2248,7 +2248,7 @@
                 <h5 class="mb-0">
                   <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo"
                     aria-expanded="false" aria-controls="collapseTwo">
-                    <span>Kitoblar</span><img src="img/collapse-item-ic.svg" alt="" />
+                    <span class="mob-search-item-title">Kitoblar</span><img src="img/collapse-item-ic.svg" alt="" />
                   </button>
                 </h5>
               </div>
@@ -2266,7 +2266,7 @@
                 <h5 class="mb-0">
                   <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree"
                     aria-expanded="false" aria-controls="collapseThree">
-                    <span>Ibodat anjomlari</span><img src="img/collapse-item-ic.svg" alt="" />
+                    <span class="mob-search-item-title">Ibodat anjomlari</span><img src="img/collapse-item-ic.svg" alt="" />
                   </button>
                 </h5>
               </div>
@@ -2284,7 +2284,7 @@
                 <h5 class="mb-0">
                   <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour"
                     aria-expanded="false" aria-controls="collapseFour">
-                    <span>Kitoblar</span><img src="img/collapse-item-ic.svg" alt="" />
+                    <span class="mob-search-item-title">Kitoblar</span><img src="img/collapse-item-ic.svg" alt="" />
                   </button>
                 </h5>
               </div>
@@ -2302,7 +2302,7 @@
                 <h5 class="mb-0">
                   <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFive"
                     aria-expanded="false" aria-controls="collapseFive">
-                    <span>Ibodat anjomlari</span><img src="img/collapse-item-ic.svg" alt="" />
+                    <span class="mob-search-item-title">Ibodat anjomlari</span><img src="img/collapse-item-ic.svg" alt="" />
                   </button>
                 </h5>
               </div>
@@ -2320,7 +2320,7 @@
                 <h5 class="mb-0">
                   <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseSix"
                     aria-expanded="false" aria-controls="collapseSix">
-                    <span>Kitoblar</span><img src="img/collapse-item-ic.svg" alt="" />
+                    <span class="mob-search-item-title">Kitoblar</span><img src="img/collapse-item-ic.svg" alt="" />
                   </button>
                 </h5>
               </div>
@@ -2338,7 +2338,7 @@
                 <h5 class="mb-0">
                   <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseSeven"
                     aria-expanded="false" aria-controls="collapseSeven">
-                    <span>Ibodat anjomlari</span><img src="img/collapse-item-ic.svg" alt="" />
+                    <span class="mob-search-item-title">Ibodat anjomlari</span><img src="img/collapse-item-ic.svg" alt="" />
                   </button>
                 </h5>
               </div>
@@ -2356,7 +2356,7 @@
                 <h5 class="mb-0">
                   <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseEight"
                     aria-expanded="false" aria-controls="collapseEight">
-                    <span>Ibodat anjomlari</span><img src="img/collapse-item-ic.svg" alt="" />
+                    <span class="mob-search-item-title">Ibodat anjomlari</span><img src="img/collapse-item-ic.svg" alt="" />
                   </button>
                 </h5>
               </div>
@@ -2383,9 +2383,9 @@
           <h5 class="modal-title">
             Корзина /<span class="modal-subtitle"> 3 товара</span>
           </h5>
-          <button aria-label="Close" class="close" data-dismiss="modal" type="button">
+          <!-- <button aria-label="Close" class="close" data-dismiss="modal" type="button">
             <img src="img/ic_close_modal.svg" />
-          </button>
+          </button> -->
         </div>
         <div class="modal-body">
           <div class="es-cart-list">
@@ -2427,45 +2427,8 @@
                   <div class="es-cart-price">
                     12,000 so‘m
                   </div>
-                </div>
-              </div>
-            </div>
-            <div class="es-cart-item">
-              <div class="es-cart-img">
-                <img class="img-fluid" src="img/cart-item.jpg" />
-              </div>
-              <div class="es-cart-product-info d-flex position-relative">
-                <div class="es-cart-info">
-                  <div class="es-cart-category">
-                    <a class="full-category" href="#">KITOBLAR - BADIIY ADABIYOT -
-                      TURK ADABIYOTI</a>
-                    <a class="short-category" href="#">KITOBLAR</a>
-                  </div>
-                  <div class="es-cart-title">
-                    <a href="#">Hikmatlar kitobi. Shayx
-                      Rumiy Jaloliddin</a>
-                  </div>
-                  <div class="es-cart-param">
-                    240 bet
-                  </div>
-                </div>
-                <div class="es-cart-price-qty">
-                  <div class="es-cart-qty-delete d-flex align-items-center">
-                    <div class="es-cart-qty">
-                      <button class="btn es-minus">
-                        <img src="img/minus.svg" alt="">
-                      </button>
-                      <span class="es-cart-product-qty">1</span>
-                      <button class="btn es-plus">
-                        <img src="img/add.svg" alt="">
-                      </button>
-                    </div>
-                    <button class="es-cart-delete btn">
-                      <img src="img/Delete.svg" alt="">
-                    </button>
-                  </div>
-                  <div class="es-cart-price">
-                    12,000 so‘m
+                  <div class="es-cart-price mob-es-cart-price">
+                    12,000&nbsp;<s>U</s>
                   </div>
                 </div>
               </div>
@@ -2506,6 +2469,52 @@
                   </div>
                   <div class="es-cart-price">
                     12,000 so‘m
+                  </div>
+                  <div class="es-cart-price mob-es-cart-price">
+                    12,000&nbsp;<s>U</s>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="es-cart-item">
+              <div class="es-cart-img">
+                <img class="img-fluid" src="img/cart-item.jpg" />
+              </div>
+              <div class="es-cart-product-info d-flex position-relative">
+                <div class="es-cart-info">
+                  <div class="es-cart-category">
+                    <a class="full-category" href="#">KITOBLAR - BADIIY ADABIYOT -
+                      TURK ADABIYOTI</a>
+                    <a class="short-category" href="#">KITOBLAR</a>
+                  </div>
+                  <div class="es-cart-title">
+                    <a href="#">Hikmatlar kitobi. Shayx
+                      Rumiy Jaloliddin</a>
+                  </div>
+                  <div class="es-cart-param">
+                    240 bet
+                  </div>
+                </div>
+                <div class="es-cart-price-qty">
+                  <div class="es-cart-qty-delete d-flex align-items-center">
+                    <div class="es-cart-qty">
+                      <button class="btn es-minus">
+                        <img src="img/minus.svg" alt="">
+                      </button>
+                      <span class="es-cart-product-qty">1</span>
+                      <button class="btn es-plus">
+                        <img src="img/add.svg" alt="">
+                      </button>
+                    </div>
+                    <button class="es-cart-delete btn">
+                      <img src="img/Delete.svg" alt="">
+                    </button>
+                  </div>
+                  <div class="es-cart-price">
+                    12,000 so‘m
+                  </div>
+                  <div class="es-cart-price mob-es-cart-price">
+                    12,000&nbsp;<s>U</s>
                   </div>
                 </div>
               </div>
@@ -2550,45 +2559,8 @@
                   <div class="es-cart-price">
                     12,000 so‘m
                   </div>
-                </div>
-              </div>
-            </div>
-            <div class="es-cart-item">
-              <div class="es-cart-img">
-                <img class="img-fluid" src="img/cart-item.jpg" />
-              </div>
-              <div class="es-cart-product-info d-flex position-relative">
-                <div class="es-cart-info">
-                  <div class="es-cart-category">
-                    <a class="full-category" href="#">KITOBLAR - BADIIY ADABIYOT -
-                      TURK ADABIYOTI</a>
-                    <a class="short-category" href="#">KITOBLAR</a>
-                  </div>
-                  <div class="es-cart-title">
-                    <a href="#">Hikmatlar kitobi. Shayx
-                      Rumiy Jaloliddin</a>
-                  </div>
-                  <div class="es-cart-param">
-                    240 bet
-                  </div>
-                </div>
-                <div class="es-cart-price-qty">
-                  <div class="es-cart-qty-delete d-flex align-items-center">
-                    <div class="es-cart-qty">
-                      <button class="btn es-minus">
-                        <img src="img/minus.svg" alt="">
-                      </button>
-                      <span class="es-cart-product-qty">1</span>
-                      <button class="btn es-plus">
-                        <img src="img/add.svg" alt="">
-                      </button>
-                    </div>
-                    <button class="es-cart-delete btn">
-                      <img src="img/Delete.svg" alt="">
-                    </button>
-                  </div>
-                  <div class="es-cart-price">
-                    12,000 so‘m
+                  <div class="es-cart-price mob-es-cart-price">
+                    12,000&nbsp;<s>U</s>
                   </div>
                 </div>
               </div>
@@ -2629,6 +2601,52 @@
                   </div>
                   <div class="es-cart-price">
                     12,000 so‘m
+                  </div>
+                  <div class="es-cart-price mob-es-cart-price">
+                    12,000&nbsp;<s>U</s>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="es-cart-item">
+              <div class="es-cart-img">
+                <img class="img-fluid" src="img/cart-item.jpg" />
+              </div>
+              <div class="es-cart-product-info d-flex position-relative">
+                <div class="es-cart-info">
+                  <div class="es-cart-category">
+                    <a class="full-category" href="#">KITOBLAR - BADIIY ADABIYOT -
+                      TURK ADABIYOTI</a>
+                    <a class="short-category" href="#">KITOBLAR</a>
+                  </div>
+                  <div class="es-cart-title">
+                    <a href="#">Hikmatlar kitobi. Shayx
+                      Rumiy Jaloliddin</a>
+                  </div>
+                  <div class="es-cart-param">
+                    240 bet
+                  </div>
+                </div>
+                <div class="es-cart-price-qty">
+                  <div class="es-cart-qty-delete d-flex align-items-center">
+                    <div class="es-cart-qty">
+                      <button class="btn es-minus">
+                        <img src="img/minus.svg" alt="">
+                      </button>
+                      <span class="es-cart-product-qty">1</span>
+                      <button class="btn es-plus">
+                        <img src="img/add.svg" alt="">
+                      </button>
+                    </div>
+                    <button class="es-cart-delete btn">
+                      <img src="img/Delete.svg" alt="">
+                    </button>
+                  </div>
+                  <div class="es-cart-price">
+                    12,000 so‘m
+                  </div>
+                  <div class="es-cart-price mob-es-cart-price">
+                    12,000&nbsp;<s>U</s>
                   </div>
                 </div>
               </div>
