--- a/saved-articles.html
+++ b/saved-articles.html
@@ -356,7 +356,7 @@
                                         tavsiya qilamiz.</p>
                                 </div>
                                 <div class="es-article-img-container">
-                                    <img src="img/article.png" alt="">
+                                    <img class="img-fluid" src="img/article.png" alt="">
                                 </div>
                             </div>
                         </article>
@@ -386,7 +386,7 @@
                                         tavsiya qilamiz.</p>
                                 </div>
                                 <div class="es-article-img-container">
-                                    <img src="img/article.png" alt="">
+                                    <img class="img-fluid" src="img/article.png" alt="">
                                 </div>
                             </div>
                         </article>
@@ -448,7 +448,7 @@
             </div>
         </div>
         <div class="footer-black">
-            <div class="container-fluid">
+            <div class="container">
                 <div class="row footer-detail">
                     <div class="col-md-4">
                         <div class="social-list">
