--- a/saved-full.html
+++ b/saved-full.html
@@ -343,7 +343,7 @@
                         </div>
                     </div>
                     <div class="col-md-9">
-                        <ul class="es-product-filter align-baseline">
+                        <ul class="es-product-filter">
                             <li class="active">
                                 <button class="btn">Yangilari bo‘yicha</button>
                             </li>
@@ -501,7 +501,7 @@
             </div>
         </div>
         <div class="footer-black">
-            <div class="container-fluid">
+            <div class="container">
                 <div class="row footer-detail">
                     <div class="col-md-4">
                         <div class="social-list">
