--- a/action-view.html
+++ b/action-view.html
@@ -416,7 +416,7 @@
                       <div class="es-product-category">
                         <a href="product-view.html">Kitoblar</a>
                       </div>
-                      <div class="es-product-t aria-current="page" itle">
+                      <div class="es-product-title">
                         <a href="product-view.html">Oltin silsila to‘plami</a>
                       </div>
                       <div class="es-product-price">
