--- a/checkout.html
+++ b/checkout.html
@@ -37,11 +37,11 @@
 
     <main class="es-checkout-bg">
         <div class="container">
-            <div class="es-checkout-wrapper">
+            <div class="es-checkout-wrapper row">
                 <a class="checkout-back-btn" href="#">
                     <img src="img/arrow-left.svg" alt="">
                 </a>
-                <div class="es-checkout-info-containers">
+                <div class="col-12 col-md-4">
                     <div class="es-checkout-info-container">
                         <h2 class="es-checkout-info-header">Manzil va tel.raqam</h2>
                         <p class="es-checkout-desc">Mahsulot yetkazib beriladigan manzilni va telefon raqamingizni
@@ -108,7 +108,7 @@
                             TASDIQLASH</button>
                     </div>
                 </div>
-                <div class="es-order-wrapper">
+                <div class="es-order-wrapper col-12 col-md-5">
                     <div class="es-order">
                         <div class="es-order-header">
                             <div class="es-order-main-header">
@@ -146,7 +146,7 @@
                             <span class="es-item-price">15,000 so‘m</span>
                         </p>
                         <div class="d-flex justify-content-between align-items-center mob-confirm-order-container">
-                            <div>
+                            <div class="d-md-flex flex-column justify-content-end w-md-100">
                                 <p class="es-total-price-title">Jami</p>
                                 <p class="es-total-price">357,000 <s>U</s></p>
                             </div>
