--- a/user-orders.html
+++ b/user-orders.html
@@ -424,7 +424,7 @@
             </div>
         </div>
         <div class="footer-black">
-            <div class="container-fluid">
+            <div class="container">
                 <div class="row footer-detail">
                     <div class="col-md-4">
                         <div class="social-list">
